# adaptapi_poc

./: README.md
adaptapi_fastapi/: pyproject.toml
adaptapi_fastapi/adaptapi_fastapi/: middleware.py
demo_server/: README.md  pyproject.toml
demo_server/demo_server/: main.py
demo_server/demo_server/adaptapi_versions/: 0001_add_greeting_field.py  0002_structured_output.py
