[tool.poetry]
name = "adaptapi-fastapi"
version = "0.1.0"
description = ""
authors = ["Ron Hass <ronhass37@gmail.com>"]
readme = "README.md"
packages = [{include = "adaptapi_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
