[tool.poetry]
name = "adaptapi-fastapi"
version = "0.1.0"
description = ""
authors = ["Ron Hass <ronhass37@gmail.com>"]
readme = "README.md"
packages = [{include = "adaptapi_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
