[tool.poetry]
name = "demo-server"
version = "0.1.0"
description = ""
authors = ["Ron Hass <ronhass37@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_server"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
