[tool.poetry]
name = "demo-server"
version = "0.1.0"
description = ""
authors = ["Ron Hass <ronhass37@gmail.com>"]
readme = "README.md"
packages = [{include = "demo_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
pydantic = "^2.2.1"
uvicorn = "^0.23.2"
adaptapi-fastapi = {path = "../adaptapi_fastapi", develop = true}


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
